# airvpn-wireguard-picker

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
contrib/: actions_airvpnpicker.conf  build-pyz.sh  install-opnsense.sh
docs/: algorithm.md  opnsense.md
src/airvpn_picker/: __init__.py  __main__.py  api.py  cli.py  probe.py  scoring.py  selector.py  state.py  wg.py
tests/: conftest.py  test_api.py  test_cli.py  test_scoring.py  test_selector.py  test_smoke.py  test_state.py  test_state_extensions.py  test_wg.py
tests/fixtures/: status_sample.json
