[project]
name = "airvpn-wireguard-picker"
version = "0.1.0"
description = "Pick the fastest AirVPN WireGuard server by load and update a live wg peer endpoint."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Alejandro Gaston Alvarez", email = "alegasalv@gmail.com" },
]
keywords = ["airvpn", "wireguard", "vpn", "opnsense", "freebsd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
airvpn-picker = "airvpn_picker.cli:main"

[project.urls]
Homepage = "https://github.com/alealv/airvpn-wireguard-picker"
Issues = "https://github.com/alealv/airvpn-wireguard-picker/issues"
Changelog = "https://github.com/alealv/airvpn-wireguard-picker/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.11.5,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "airvpn_picker"
module-root = "src"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "ty>=0.0.1a1",
    "pre-commit>=4.0",
]

# ----------------------------------------------------------------------------
# Ruff: lint + format (replaces black, isort, flake8, pylint)
# ----------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "PTH", # flake8-use-pathlib
    "ARG", # flake8-unused-arguments
    "PL",  # pylint
    "RUF", # ruff-specific
    "S",   # flake8-bandit (security)
    "N",   # pep8-naming
    "ANN", # flake8-annotations
    "D",   # pydocstyle
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring (conflicts with D211)
    "D213", # Multi-line docstring summary should start at the second line (conflicts with D212)
    "PLR0913", # Too many arguments — CLI orchestrators legitimately have many
    "S603", # subprocess call: check for execution of untrusted input — we use lists, no shell
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # use of assert
    "ANN",  # don't require type annotations in tests
    "D",    # don't require docstrings in tests
    "PLR2004", # magic value comparisons OK in tests
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ----------------------------------------------------------------------------
# ty: Astral type checker (still alpha — fall back to pyright if needed)
# ----------------------------------------------------------------------------
[tool.ty.src]
include = ["src", "tests"]

[tool.ty.environment]
python-version = "3.11"

# ----------------------------------------------------------------------------
# pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src/airvpn_picker"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
